--- a/Frontend/src/Components/RecipieCards/Card.css
+++ b/Frontend/src/Components/RecipieCards/Card.css
@@ -6,7 +6,7 @@
 }
 
 .project-container {
-    max-width: 1140px;
+    max-width: 1200px;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -24,6 +24,7 @@
     background: #1a1919;
     padding: 1.2rem 1rem;
     width: 100%;
+    position: relative;
 }
 
 .project-card:hover {
@@ -41,6 +42,10 @@
     justify-content: space-between;
     padding: 0.5rem 0;
     color: black !important;
+    position: absolute; /* Added to position the button */
+    bottom: 0; /* Positioned it at the bottom */
+    left: 0; /* Positioned it at the left */
+    width: 100%;
 }
 
 .btns {
@@ -52,6 +57,8 @@
     border: 1px solid white;
     font-weight: 600;
     cursor: pointer;
+    width: auto; 
+    margin:20px;
 }
 
 
@@ -74,6 +81,7 @@
     padding-bottom: 1rem;
     font-size: 1.1rem;
     text-align: justify;
+    margin-bottom: 70px;
 }
 
 @media screen and (max-width: 740px) {
@@ -83,3 +91,5 @@
         grid-template-columns: 1fr;
     }
 }
+
+
